--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ def allureVersion = "2.17.3",
     restAssuredVersion = "4.5.1",
     commonsIoVersion = "2.11.0",
     junitVersion = "5.8.2",
+    ownerVersion = "1.0.12",
     slf4jVersion = "1.7.32"
 
 allure {
