--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,8 @@ def allureVersion = "2.17.3",
     restAssuredVersion = "4.5.1",
     commonsIoVersion = "2.11.0",
     junitVersion = "5.8.2",
-    slf4jVersion = "1.7.32"
+    slf4jVersion = "1.7.32",
+    ownerVersion = "1.0.12"
 
 allure {
     report {
@@ -39,7 +40,7 @@ dependencies {
             "commons-io:commons-io:$commonsIoVersion",
             "org.junit.jupiter:junit-jupiter:$junitVersion",
             "org.slf4j:slf4j-simple:$slf4jVersion",
-            "org.aeonbits.owner:owner:1.0.12",
+            "org.aeonbits.owner:owner:$ownerVersion",
     )
 }
 
